# hasta-la-vista-money

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .scrutinizer.yml  Aptfile  CHANGELOG.md  CHECKS  Dockerfile  LICENSE  LICENSE.md  Makefile  Procfile  README.md  README.rst  README_ENG.md  app.json  apt-packages  docker-compose.yaml  localizely.yml  manage.py  pyproject.toml  qodana.yaml  requirements.txt  runtime.txt  setup.cfg
.github/workflows/: docker-publish.yml  dokku-auto-deploy.yaml  dokku-auto-deploy.yml  dokku.yaml  hasta_la_vista_money.yaml  qodana.yaml
INSTALLATION/: INSTALLATION_ENG.md  INSTALLATION_RUS.md
applications/: urls.py  views.py
bot/: add_receipt.py  adding_receipt.py  config_bot.py  helpers.py  json_parse.py  log_config.py  markup.py  models.py  receipt_parser.py  receipt_parser_json.py  receipt_parser_text.py  services.py  settings_bot.py  telegrambot.py  tests.py  views.py
bot/migrations/: 0001_initial.py  0002_rename_receipts_receipt.py  0003_delete_receipt.py
bot/receipt/: empty
bot/receipts/: receipt.json
config/: asgi.py  celery.py  urls.py  wsgi.py
config/django/: base.py  dev.py  forms.py  prod.py  sessions.py
docker/: local.Dockerfile  production.Dockerfile
docs/: conf.py  hasta_la_vista_money.applications.migrations.rst  hasta_la_vista_money.applications.rst  hasta_la_vista_money.bot.management.commands.rst  hasta_la_vista_money.expense.migrations.rst  hasta_la_vista_money.income.migrations.rst  hasta_la_vista_money.receipts.migrations.rst  hasta_la_vista_money.rst  hasta_la_vista_money.users.migrations.rst  hasta_la_vista_money.users.rst  index.rst  install.rst  mkdocs.yml  requirements.txt
docs/docs/: account.md  index.md  install.md
docs/source/: conf.py  hasta_la_vista_money.applications.rst  hasta_la_vista_money.bot.management.commands.rst  hasta_la_vista_money.bot.management.rst  hasta_la_vista_money.bot.rst  hasta_la_vista_money.expense.rst  hasta_la_vista_money.income.rst  hasta_la_vista_money.receipts.rst  hasta_la_vista_money.rst  hasta_la_vista_money.users.rst  index.rst  install.rst  modules.rst
fixtures/: account.yaml  customer.yaml  expense.yaml  expense_cat.yaml  income.yaml  income_cat.yaml  json_webhooks.json  loan.yaml  product.yaml  receipt.json  receipt.yaml  receipt_customer.yaml  receipt_product.yaml  receipt_receipt.yaml  receipt_seller.yaml  receipts.yaml  telegram_users.yaml  users.yaml
hastaLaVistaMoney/: asgi.py  settings.py  urls.py  wsgi.py
hasta_la_vista_money/: __init__.py  asgi.py  buttons_delete.py  constants.py  custom_mixin.py  forms.py  settings.py  urls.py  utils.py  views.py  wsgi.py
hasta_la_vista_money/account/: __init__.py  admin.py  apis.py  apps.py  forms.py  models.py  prepare.py  serializers.py  tests.py  urls.py  views.py
hasta_la_vista_money/applications/: apps.py  urls.py  views.py
hasta_la_vista_money/bot/: apps.py  auth.py  bot_handler.py  config_bot.py  constants.py  decode_qrcode.py  handle_receipt_manual.py  handler_auth.py  handler_bot.py  handler_pin_message.py  handler_receipt_content_type.py  json_parse.py  keyboards.py  log_config.py  middleware.py  process_manual_receipt.py  qrcode_decode.py  receipt_api_receiver.py  receipt_parse.py  receipt_parse_handler.py  receipt_parser_json.py  receipt_parser_text.py  receipt_parser_text_qrcode.py  receipt_processing.py  services.py  tasks.py  tests.py  urls.py  views.py  webhooks.py
hasta_la_vista_money/budget/: apps.py  forms.py  models.py  urls.py  views.py
hasta_la_vista_money/commonlogic/: apps.py  check_user.py  custom_paginator.py  forms.py  generate_dates.py  models.py  views.py
hasta_la_vista_money/expense/: admin.py  apps.py  filters.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
hasta_la_vista_money/income/: admin.py  apps.py  filters.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
hasta_la_vista_money/loan/: apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
hasta_la_vista_money/receipts/: admin.py  apis.py  apps.py  forms.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
hasta_la_vista_money/reports/: apps.py  tasks.py  urls.py  views.py
hasta_la_vista_money/templatags/: generate_hash.py  thousand_comma.py  utils.py
hasta_la_vista_money/users/: admin.py  apis.py  apps.py  forms.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
nginx/: nginx.conf
receipts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
receipts/migrations/: 0001_initial.py  0002_alter_receipt_product_information.py  0002_alter_receipt_receipt_date.py  0002_delete_receipts.py  0003_alter_receipt_product_information.py  0003_alter_receipt_receipt_date.py  0004_alter_receipt_product_information.py  0004_receipt_nds_type_receipt_operation_type_and_more.py  0005_remove_receipt_nds_type_remove_receipt_payment_type_and_more.py
requirements/: dev.txt  prod.txt
static/css/: style.css  style_mobile.css  styles.css  styles.css.map  styles.map
static/fonts/: Amarante Regular.eot  Gloria Hallelujah.eot  Kalam Bold.eot  Kalam Light.eot  Kalam.eot  SirinStencil.eot
templates/: 404.html  500.html  base.html  error_modal.html  header.html  index.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+287 files in other folders)
