[tool.poetry]
name = "hastalavistamoney"
version = "1.1.0"
description = "Home Accounting Project"
authors = ["Alexander Pavlov <dev@pavlovteam.ru>"]
packages = [
    { include = "hasta_la_vista_money" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
python-dotenv = ">=0.20.0"
dj-database-url = ">=1.0.0"
django-bootstrap5 = ">=22.1"
psycopg2-binary = ">=2.9.3"
whitenoise = ">=6.0.0"
django-filter = ">=22.1"
PyYAML = ">=6.0"
rollbar = ">=0.16.2"
pyTelegramBotAPI = "^4.6.0"
Django = ">=4.1.7"
urllib3 = "^2.0.2"
django-csp = "^3.7"
channels = "^4.0.0"
Pillow = "^9.5.0"
opencv-python = "^4.7.0"
numpy = "^1.24.3"
pyzbar = "^0.1.9"
django-bootstrap-datepicker-plus = "^5.0.3"
django-axes = "^6.0.5"
Twisted = "^22.10.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
Faker = ">=13.7.0"
coverage = ">=6.4"
wemake-python-styleguide = "^0.18.0"
Sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.0"
furo = "^2023.3.27"
myst-parser = ">=1.0.0"
django-debug-toolbar = "^4.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    /(
        | migrations
    )
  )/
)
'''
